--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,20 @@
 language: c
+sudo: false
 env:
   - RELEASE='--enable=release'
   - RELEASE=''
 compiler:
   - gcc
   - clang
+addons:
+  apt:
+    packages:
+      - valgrind
+      - portaudio19-dev
+      - libjack-dev
+      - ladspa-sdk
+      - liblua5.2-dev
+      - libsndfile1-dev
+      - lua5.2
+      - alsa-utils
 script: source tests/activate && scons tests $RELEASE
-before_install:
- - sudo apt-get update -qq
- - sudo apt-get install -qq valgrind portaudio19-dev libjack-dev ladspa-sdk liblua5.2-dev libsndfile1-dev lua5.2 alsa-utils
- - aplay --list-devices
